src/styles/elements/_slider.css
@layer components {
    .slider {
        --slider-display: block;
        --slider-width: var(--content-width-with-padding);
        --slider-max-width: var(--content-max-width);
        --slider-margin: var(--spacing-between-consecutive-elements-normal) auto 0;
        --slider-aspect-ratio: var(--aspect-ratio-16-9);
        --slider-position: relative;
        --slider-z-index: var(--z-index-content);

        --slider-slides-gap: 0;

        --slider-image-object-fit: cover;

        --slider-top-position: relative;

        --slider-controls-position: absolute;
        --slider-controls-top: 0;
        --slider-controls-left: 0;
        --slider-controls-width: 100%;
        --slider-controls-height: auto;
        --slider-controls-aspect-ratio: var(--slider-aspect-ratio);
        --slider-controls-z-index: 1;

        --slider-control-position: absolute;
        --slider-control-top: calc(calc(100% - var(--slider-control-size)) / 2);
        --slider-control-transform: translateY(-50%);
        --slider-control-size: calc(var(--spacing-l) + var(--spacing-s));
        --slider-control-border-radius: var(--border-radius-circle);
        --slider-control-distance-to-margin: var(--spacing-normal);
        --slider-control-border: none;
        --slider-control-opacity: 1;
        --slider-control-disabled-opacity: 0;

        --slider-control-icon-position: absolute;
        --slider-control-icon-inset: 50% auto auto 50%;
        --slider-control-icon-transform: translate(-50%, -50%);

        --slider-item-width: 100%;
        --slider-item-height: 100%;
        --slider-item-margin: 0;
        --slider-item-position: relative;
        --slider-item-border-radius: var(--border-radius-default);
        --slider-item-overflow: hidden;
        --slider-item-display: flex;
        --slider-item-align-items: center;
        --slider-item-justify-content: center;

        display: var(--slider-display);
        position: var(--slider-position);
        width: var(--slider-width);
        max-width: var(--slider-max-width);
        margin: var(--slider-margin);
        z-index: var(--slider-z-index);
    }

    span:first-child + .slider {
        --slider-margin: var(--spacing-between-elements-normal) auto 0;
    }

    .text-block__figure .slider[content-type="default"],
    .text-block__figure .slider[content-type="accordion"] {
        --slider-width: var(--content-fullwidth);
        --slider-margin: 0 auto;
    }

    .header .slider,
    .slider:first-child {
        --slider-margin: 0 auto;
    }

    .portfolio-gallery .slider {
        --slider-margin: 0 auto;

        width: 100%;
    }

    .slider[content-type="teaser"] {
        --slider-max-width: var(--content-wide-max-width);
        /* stylelint-disable-next-line max-line-length */
        --slider-margin: var(--spacing-between-consecutive-elements-normal) auto calc(var(--slider-control-size) + var(--spacing-l));
    }

    .slider[content-type="logos"] {
        --slider-margin: var(--spacing-between-consecutive-elements-normal) auto;
        --slider-slides-gap: var(--spacing-l);
        --slider-control-distance-to-margin: 0;
    }

    .slider[content-type="media"] {
        --slider-margin: var(--spacing-between-consecutive-elements-normal) auto;
        --slider-slides-gap: var(--spacing-l);
    }

    .slider[content-type="review"] {
        --slider-width: 100%;
        --slider-max-width: var(--content-wide-max-width);
        --slider-aspect-ratio: var(--aspect-ratio-default);
    }

    .slider[content-type="card-collection"] {
        --slider-aspect-ratio: auto;
        --slider-max-width: var(--content-wide-max-width);
    }

    .slider[element-design="default"] {
        --slider-control-default-background-color: var(--color-font);
        --slider-control-hover-background-color: var(--color-font-light);

        --slider-control-icon-default-color: var(--color-bg);
        --slider-control-icon-hover-color: var(--color-font-dark);
    }

    .slider[element-design="primary"] {
        --slider-control-default-background-color: var(--color-primary);
        --slider-control-hover-background-color: var(--color-primary-light);

        --slider-control-icon-default-color: var(--color-bg);
        --slider-control-icon-hover-color: var(--color-primary-dark);
    }

    .slider[element-design="secondary"] {
        --slider-control-default-background-color: var(--color-secondary);
        --slider-control-hover-background-color: var(--color-secondary-light);

        --slider-control-icon-default-color: var(--color-bg);
        --slider-control-icon-hover-color: var(--color-secondary-dark);
    }

    .slider[element-design="light-grey"] {
        --slider-control-default-background-color: var(--color-font-light);
        --slider-control-hover-background-color: var(--color-primary-dark);

        --slider-control-icon-default-color: var(--color-font-dark);
        --slider-control-icon-hover-color: var(--color-bg);
    }

    .slider[element-fullwidth],
    .header .slider {
        --slider-width: var(--content-fullwidth);
        --slider-max-width: var(--content-fullwidth);
    }

    .slider[content-type="card-collection"] .slider__track {
        padding: .5rem .25rem !important;
    }

    .slider__item {
        width: var(--slider-item-width);
        height: var(--slider-item-height);
        margin: var(--slider-item-margin);
        position: var(--slider-item-position);
        border-radius: var(--slider-item-border-radius);
        overflow: var(--slider-item-overflow);
        display: var(--slider-item-display);
        align-items: var(--slider-item-align-items);
        justify-content: var(--slider-item-justify-content);
    }

    /* Header slider height */
    .header:not(.header--portfolio-gallery) .splide,
    .header:not(.header--portfolio-gallery) .splide__track,
    .header:not(.header--portfolio-gallery) .splide__list,
    .header:not(.header--portfolio-gallery) .splide__slide,
    .header:not(.header--portfolio-gallery) .slider__item {
        height: var(--header-height) !important;
    }

    /* hide the clone that gets generated on some occasions, even if the clones mount is set to 0 */
    .slider[slider-clones-amount="0"] li.splide__slide--clone {
        display: none !important;
    }

    @container (width >= 840px) {
        .slider[content-type="logos"] {
            --slider-slides-gap: var(--spacing-xxl);
        }

        .slider[content-type="teaser"] {
            --slider-margin: var(--spacing-between-consecutive-elements-normal) auto 0;
        }

        .header .slider {
            --slider-control-distance-to-margin: var(--spacing-xl);
        }

        .text-block__figure .slider[content-type="teaser"] {
            --slider-width: var(--content-fullwidth);
            --slider-margin: 0 auto;
        }
    }
}

